# rust-http-server-boilerplate

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml.example  users.sql
src/: app.rs  main.rs
src/app/: api.rs  data.rs  files.rs  hello.rs  mod.rs
